re-upolded the project and fixed merge conflict in data.sql

--- a/src/main/resources/static/style.css
+++ b/src/main/resources/static/style.css
@@ -35,7 +35,7 @@ html, body {
       width: 80%;
       padding: 25px;
       margin-bottom: 20px;
-      background: rgba(32, 32, 32, 0.9);
+      background: rgba(0, 0, 0, 0.9);
       }
       input, select {
       padding: 5px;
@@ -44,12 +44,6 @@ html, body {
       border: none;
       border-bottom: 1px solid #eee;
       }
-
-    a:visited {
-        color: red;
-
-    }
-
       input::placeholder {
       color: #eee;
       }
@@ -63,6 +57,7 @@ html, body {
       input[type=radio] {
       display: none;
       }
+
       button {
       display: block;
       width: 400px;
@@ -106,15 +101,6 @@ html, body {
       margin-top: 10px;
 }
 
-table {
-  border-collapse: collapse
-}
-
 table, th, td {
-border:  1px solid white;
-
+  border:  solid white;
 }
-
-
-
-
