--- a/src/main/resources/templates/addPage.html
+++ b/src/main/resources/templates/addPage.html
@@ -9,38 +9,36 @@
 <body>
 
 <div class="main-block">
-    <h1>EMS - Add Employee</h1>
+<h1>Empolyee Mangment System</h1>
 
-    <form id="newEmployeeForm"
-          action="#"
-          th:action="@{/ems/create}"
-          th:object="${employee}"
-          method="post">
-        <div class="info">
-            <input th:field="*{employeeId}" class="employeeId" placeholder="Employee ID" id="employeeId" required />
+        <form id="newEmployeeForm"
+              action="#"
+              th:action="@{/ems/create}"
+              th:object="${employee}"
+              method="post">
+            <div class="info">
+                <input th:field="*{firstName}" class="fname" placeholder="First Name" id="firstName" required/>
 
-            <input th:field="*{firstName}" class="fname" placeholder="First Name" id="firstName" required/>
+                <input th:field= "*{lastName}" placeholder="Last Name" id="lastName" required/>
 
-            <input th:field= "*{lastName}" placeholder="Last Name" id="lastName" required/>
-
-            <input th:field= "*{email}" placeholder="Email" id="email" required/>
+                <input th:field= "*{email}" placeholder="Email" id="email" required/>
 
 
-            <select th:field="*{department}">
-                <option value="NA" disabled selected>Department</option>
-                <option value="Information Technology">Information Technology</option>
-                <option value="HumanResource">HumanResource</option>
-                <option value="Finance">Finance</option>
-                <option value="OPD">OPD</option>
+                <select th:field="*{department}">
+                    <option value="NA" disabled selected>Department</option>
+                    <option value="Information Technology">Information Technology</option>
+                    <option value="HumanResource">HumanResource</option>
+                    <option value="Finance">Finance</option>
+                    <option value="OPD">OPD</option>
 
-            </select>
+                </select>
 
-            <input th:field= "*{salary}" placeholder="Salary" id="salary" required/>
+                <input th:field= "*{salary}" placeholder="Salary" id="salary" required/>
 
-            <input th:field= "*{date}" placeholder="Hire Date" id="date" required type="date"/>
-            <button class="button" type="submit">Add</button>
+                <input th:field= "*{date}" placeholder="Hire Date" id="date" required type="date"/>
+                <button class="button" type="submit">Add</button>
 
-        </div>
+            </div>
 
     </form>
 </div>
