--- a/src/main/resources/templates/updatePage.html
+++ b/src/main/resources/templates/updatePage.html
@@ -9,7 +9,7 @@
 <body>
 
 <div class="main-block">
-    <h1>EMS - Update Employee</h1>
+    <h1>Employee Management System</h1>
 
     <form id="updateEmployeeForm"
           action="#"
@@ -18,8 +18,6 @@
           method="post">
         <div class="info">
             <input type="hidden" th:field="*{id}"  th:value="${employee.id}" id="id" />
-
-            <input th:field="*{employeeId}" placeholder="Employee ID" th:value="${employee.employeeId}" id="employeeId" required/>
             <input th:field="*{firstName}" placeholder="First Name" th:value="${employee.firstName}" id="firstName" required/>
             <input th:field= "*{lastName}" placeholder="Last Name" th:value="${employee.lastName}" id="lastName" required/>
             <input th:field= "*{email}" placeholder="Email" th:value="${employee.email}" id="email" required/>
@@ -29,14 +27,14 @@
 
 
 
-            <!--            <select>-->
-            <!--                <option value="${employee.department}" disabled selected>Department</option>-->
-            <!--                <option value="Information Technology">Information Technology</option>-->
-            <!--                <option value="Human Resource">HumanResource</option>-->
-            <!--                <option value="Finance">Finance</option>-->
-            <!--                <option value="OPD">OPD</option>-->
+<!--            <select>-->
+<!--                <option value="${employee.department}" disabled selected>Department</option>-->
+<!--                <option value="Information Technology">Information Technology</option>-->
+<!--                <option value="Human Resource">HumanResource</option>-->
+<!--                <option value="Finance">Finance</option>-->
+<!--                <option value="OPD">OPD</option>-->
 
-            <!--            </select>-->
+<!--            </select>-->
             <button class="button" type="submit">Update</button>
 
         </div>
